--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENSINANDO A APRENDER</title>
-    <link rel="shortcut icon" href="assents\favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css\main.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
     <header>
-        <img src="assents\logoEA.png" alt="LogoEA">
+        <img src="logoEA.png" alt="LogoEA">
     </header>
 
 </body>
