--- a/projetos.html
+++ b/projetos.html
@@ -29,19 +29,13 @@
     </div>
     <hr>
 
-    <div>
+    <!-- desenvolvimento do conteudo -->
+    <div class="centerPage">
 
-        <!-- desenvolvimento do conteudo -->
-        <div class="centerPage">
-            <h4>Desenvolvimento WEB para professores</h4>
-            <hr>
-            <p class="p">Neste projeto queremos mostrar como funcionam as simples aplicações web para implementação de sites</p>
-            <hr>
-            <p class="p">Iremos mostrar algumas plataformas grátis com hospedagem e guia de instrução para desenvolvimento da sua página pessoal</p>
-            <hr>
-            <h4>Nossa forma de trabalho com você professor, é mostrar como podemos criar um projeto simples com algumas poucas páginas web</h4>
-            <br>
-        </div>
+        <!-- wix -->
+        <h3>Nossas plataformas de ensino</h3>
+        <h5><a href="pagewix.html" class="link">Como Criar um Blog na Wix</a></h5>
+        
 
     </div>
 
