--- a/pagewix.html
+++ b/pagewix.html
@@ -62,7 +62,7 @@
         <hr>
 
         <p class="p">
-            Ao clicar em <i style="color: red; font-weight: bold;">CRIAR NOVO SITE</i>, você será direcionado para está tela.
+            Ao clicar em <i style="color: red; font-weight: bold;">CRIAR NOVO SITE</i>, você será direcionado para esta tela.
             <br>
             Nela você irá escolher seu tipo de site.
         </p>
