Commit updates corrections text and page _blank for new page in wix

--- a/pagewix.html
+++ b/pagewix.html
@@ -34,16 +34,16 @@
 
         <!-- wix -->
         <h3>Nossa primeira plataforma de ensino será o Wix</h3>
-        <h5><a href="https://wix.com.br">Wix</a></h5>
+        <h5><a href="https://wix.com.br" target="_blank">Wix</a></h5>
         <p class="p">
-            Ao entrar no site pelo link disponível, você verá está tela.
+            Ao entrar no site pelo link disponível acima, você será direcionado para esta tela.
             Clique em Começar.
         </p>
         <img src="wixPageIndex.png" alt="wixPageIndex" class="imgSite">
         <hr>
 
         <p class="p">
-            Nesta tela você irá registrar seu e-mail ou fazer o login pelo Google ou Facebook
+            Nesta tela você irá registrar seu e-mail ou fazer o login pelo Google ou Facebook.
         </p>
         <img src="wixPageRegister.png" alt="wixPageRegister" class="imgSite">
         <hr>
@@ -124,9 +124,9 @@
         <hr>
 
         <p class="p">
-            Nesta tela iremos conferir todos os nossos dados, como Nome, E-mail, endereço, telefone, redesocial caso a tenham.
+            Nesta tela iremos conferir todos os nossos dados, como Nome, E-mail, endereço, telefone, rede social caso a tenham.
             <br>
-            E também nosso ponto da página, o símbolo que irar aparecer na busca.
+            E também o logo da página, o símbolo que irar aparecer na busca.
             <br>
             Caso não tenha o símbolo disponível, você poderár colocá-lo depois.
             <br>
