--- a/pagewix.html
+++ b/pagewix.html
@@ -179,7 +179,7 @@
             <br>
             Iremos utilizar a primeira opção. Elementos.
             <br>
-            Nesta opção podemos adcionar textos, cabeçalhos, botões faixas. Tudo que queremos adcionar.
+            Nesta opção podemos adcionar textos, cabeçalhos, botões faixas.
         </p>
         <img src="wixPageCriarTipoBlogPagesDesignPagesEdit.png" alt="wixPageCriarTipoBlogPagesDesignPagesEdit" class="imgSite">
         <img src="wixPageCriarTipoBlogPagesDesignPagesEditElements.png" alt="wixPageCriarTipoBlogPagesDesignPagesEditElements" class="imgSite">
@@ -209,11 +209,11 @@
             <br>
             Vamos agora nas opções de SALVAR, VISUALIZAR e PUBLICAR.
             <br><br>
-            A opção SALVAR, salva todo o desenvolvimento realizado no site.
+            A opção <strong>SALVAR</strong>, salva todo o desenvolvimento realizado no site.
             <br><br>
-            A opção VISUALIZAR, mostra como sua página ficou, aqui aconselhamos sempre antes de publicar, visualizar a página para ver se não estamos esquecendo de nada.
+            A opção <strong>VISUALIZAR</strong>, mostra como sua página ficou, aqui aconselhamos sempre antes de publicar, visualizar a página para ver se não estamos esquecendo de nada.
             <br><br>
-            A opção PUBLICAR por fim, publica seu site na WEB, ficando assim disponível para todos.
+            A opção <strong>PUBLICAR</strong> por fim, publica seu site na WEB, ficando assim disponível para todos.
         </p>
         <img src="wixPageCriarTipoBlogSave.png" alt="wixPageCriarTipoBlogSave" class="imgSite">
         <hr>
