Commit correction text

--- a/pagewix.html
+++ b/pagewix.html
@@ -221,7 +221,7 @@
         <p class="p">
             Quando publicamos nossa página Web, o Wix mostrará está tela com as informações de endereço da nossa página.
             <br>
-            Agora é só compratilhar com seus alunos, amigos, divulgar nas suas redes sociais, e assim conseguir seu público.
+            Agora é só compartilhar com seus alunos, amigos, divulgar nas suas redes sociais, e assim conseguir seu público.
         </p>
         <img src="wixPageCriarTipoBlogLink.png" alt="wixPageCriarTipoBlogLink" class="imgSite">
         <hr>
