--- a/cursos.html
+++ b/cursos.html
@@ -34,14 +34,8 @@
 
         <!-- desenvolvimento do conteudo -->
         <div class="centerPage">
-            <h4>Desenvolvimento WEB para professores</h4>
-            <hr>
-            <p class="p">Neste projeto queremos mostrar como funcionam as simples aplicações web para implementação de sites</p>
-            <hr>
-            <p class="p">Iremos mostrar algumas plataformas grátis com hospedagem e guia de instrução para desenvolvimento da sua página pessoal</p>
-            <hr>
-            <h4>Nossa forma de trabalho com você professor, é mostrar como podemos criar um projeto simples com algumas poucas páginas web</h4>
-            <br>
+            <h1><Strong>Em desenvolvimento!</Strong></h1>
+            <h4 class="p">Nesta página iremos adcionar nossos cursos HTML e CSS</h4>
         </div>
 
     </div>
