--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -32,6 +32,34 @@
 
     <!-- desenvolvimento do conteudo -->
     <div class="centerPage">
+<!-- Exemplo de inclusao de desenvolvedor - manter exemplo comentado
+        <div>
+            <img src="" alt="" class="imgRight">
+            <p class="p">Petrônio do Amaral Marques de Lima</p>
+            <p class="p">UI, Product Developer</p>
+            <p class="p">
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </p>
+        </div>
+-->
+
+        <div>
+            <img src="" alt="" class="imgRight">
+            <p class="p">Petrônio do Amaral Marques de Lima</p>
+            <p class="p">UI, Product Developer</p>
+            <p class="p">
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </p>
+        </div>
+
+        <div>
+            <img src="" alt="" class="imgLeft">
+            <p class="p">Petrônio do Amaral Marques de Lima</p>
+            <p class="p">UI, Product Developer</p>
+            <p class="p">
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </p>
+        </div>
 
     </div>
 
