--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -44,8 +44,11 @@
 -->
         <div>
             <img src="" alt="" class="imgLeft">
-            <p class="p">Petrônio do Amaral Marques de Lima</p>
-            <p class="p">UI, Product Developer</p>
+            <p class="p">
+                Petrônio do Amaral Marques de Lima
+                <br>
+                UI, Product Developer
+            </p>
             <p class="p">
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
