--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -44,11 +44,10 @@
 -->
         <div>
             <img src="" alt="" class="imgLeft">
-            <p class="p">
+            <pre class="p">
                 Petrônio do Amaral Marques de Lima
-                <br>
                 UI, Product Developer
-            </p>
+            </pre>
             <p class="p">
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
