--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -43,14 +43,14 @@
         </div>
 -->
         <div>
-            <img src="" alt="" class="imgLeft">
+            <div>
+                <img src="" alt="" class="imgLeft">
+            </div>
             <pre class="p">
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
-            </pre>
-            <p class="p">
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </p>
+            </pre>
         </div>
 
     </div>
