--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -43,10 +43,8 @@
         </div>
 -->
         <div>
-            <div>
-                <img src="" alt="" class="imgLeft">
-            </div>
-            <pre class="p">
+            <img src="" alt="" class="imgLeft">
+            <pre class="p_developer">
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
