--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -34,14 +34,24 @@
     <div class="centerPage">
 <!-- Exemplo de inclusao de desenvolvedor - manter exemplo comentado
         <div>
-            <img src="" alt="" class="imgRight">
-            <p class="p">Petrônio do Amaral Marques de Lima</p>
-            <p class="p">UI, Product Developer</p>
-            <p class="p">
-                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </p>
+            <img src="" alt="" class="imgLeft">
+            <pre class="p">
+Petrônio do Amaral Marques de Lima
+UI, Product Developer
+<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </pre>
         </div>
 -->
+
+        <div>
+            <img src="" alt="" class="imgLeft">
+            <pre class="p">
+        Petrônio do Amaral Marques de Lima
+        UI, Product Developer
+        <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </pre>
+        </div>
+
         <div>
             <img src="" alt="" class="imgLeft">
             <pre class="p">
