--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -44,7 +44,7 @@ UI, Product Developer
 -->
 
         <div>
-            <img src="" alt="" class="imgLeft">
+            <img src="" alt="" class="imgRight">
             <pre class="p">
         Petrônio do Amaral Marques de Lima
         UI, Product Developer
