--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -45,21 +45,23 @@ UI, Product Developer
 
         <div>
             <img src="" alt="" class="imgRight">
-            <pre class="p">
-        Petrônio do Amaral Marques de Lima
-        UI, Product Developer
-        <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </pre>
-        </div>
-
-        <div>
-            <img src="" alt="" class="imgLeft">
-            <pre class="p">
+            <pre>
 Petrônio do Amaral Marques de Lima
 UI, Product Developer
 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </pre>
         </div>
+        <hr>
+
+        <div>
+            <img src="" alt="" class="imgLeft">
+            <pre>
+Petrônio do Amaral Marques de Lima
+UI, Product Developer
+<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </pre>
+        </div>
+        <hr>
 
     </div>
 
