--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -42,27 +42,11 @@ UI, Product Developer
             </pre>
         </div>
 -->
-
-        <div>
-            <img src="" alt="" class="imgRight">
-            <pre>
-Petrônio do Amaral Marques de Lima
-UI, Product Developer
-<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </pre>
-        </div>
-        <hr>
-
-        <div>
-            <img src="" alt="" class="imgLeft">
-            <pre>
-Petrônio do Amaral Marques de Lima
-UI, Product Developer
-<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </pre>
-        </div>
-        <hr>
-
+    <div class="imgLeft">
+        <img src="" alt="">
+        Petrônio do Amaral Marques de Lima
+        UI, Product Developer
+        <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
     </div>
 
     <!-- footer -->
