--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -42,11 +42,13 @@ UI, Product Developer
             </pre>
         </div>
 -->
-        <div class="imgLeft">
-            <img src="" alt="">
-            Petrônio do Amaral Marques de Lima
-            UI, Product Developer
-            <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+        <div>
+            <img src="" alt="" class="imgLeft">
+            <pre class="p">
+        Petrônio do Amaral Marques de Lima
+        UI, Product Developer
+        <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </pre>
         </div>
 
     </div>
