--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -44,7 +44,7 @@ UI, Product Developer
 -->
         <div>
             <img src="" alt="" class="imgLeft">
-            <pre class="p">
+            <pre>
         Petrônio do Amaral Marques de Lima
         UI, Product Developer
         <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
