--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -43,11 +43,11 @@ UI, Product Developer
         </div>
 -->
         <div>
-            <img src="" alt="" class="imgLeft">
+            <img src="" alt="" class="imgDeveloper">
             <pre>
-Petrônio do Amaral Marques de Lima
-UI, Product Developer
-<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+                Petrônio do Amaral Marques de Lima
+                UI, Product Developer
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </pre>
             <hr>
         </div>
