--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -43,8 +43,8 @@ UI, Product Developer
         </div>
 -->
         <div>
-            <p>
-                <img src="" alt="" class="imgDeveloper">
+            <p class="imgDeveloper">
+                <img src="" alt="">
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
