--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -34,19 +34,30 @@
     <div class="centerPage">
 <!-- Exemplo de inclusao de desenvolvedor - manter exemplo comentado
         <div>
-            <img src="" alt="" class="imgLeft">
-            <pre class="p">
-Petrônio do Amaral Marques de Lima
-UI, Product Developer
-<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </pre>
+            <p class="imgDeveloper">
+                <img src="" alt="">
+                Petrônio do Amaral Marques de Lima
+                UI, Product Developer
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </p>
+            <hr>
         </div>
 -->
         <div>
             <p class="imgDeveloper">
                 <img src="" alt="">
-                Petrônio do Amaral Marques de Lima
-                UI, Product Developer
+                Petrônio do Amaral Marques de Lima.
+                UI. Product Developer.
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </p>
+            <hr>
+        </div>
+
+        <div>
+            <p class="imgDeveloper">
+                <img src="" alt="">
+                Petrônio do Amaral Marques de Lima.
+                UI. Product Developer.
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
             <hr>
