--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -43,24 +43,23 @@
             <hr>
         </div>
 -->
-        <div>
-            <p class="imgDeveloper">
+        <div class="imgDeveloper">
+            <p>
                 <img src="" alt="">
-                Petrônio do Amaral Marques de Lima.
-                UI. Product Developer.
+                Petrônio do Amaral Marques de Lima
+                UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
             <hr>
-        </div>
 
-        <div>
-            <p class="imgDeveloper">
+            <p>
                 <img src="" alt="">
-                Petrônio do Amaral Marques de Lima.
-                UI. Product Developer.
+                Petrônio do Amaral Marques de Lima
+                UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
             <hr>
+            
         </div>
 
     </div>
