--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -34,32 +34,22 @@
     <div class="centerPage">
 <!-- Exemplo de inclusao de desenvolvedor - manter exemplo comentado
         <div>
-            <p class="imgDeveloper">
-                <img src="" alt="">
-                Petrônio do Amaral Marques de Lima
-                UI, Product Developer
-                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </p>
-            <hr>
+            <img src="" alt="" class="imgLeft">
+            <pre class="p">
+Petrônio do Amaral Marques de Lima
+UI, Product Developer
+<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </pre>
         </div>
 -->
-        <div class="imgDeveloper">
+        <div>
+            <img src="" alt="" class="imgDeveloper">
             <p>
-                <img src="" alt="">
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
             <hr>
-
-            <p>
-                <img src="" alt="">
-                Petrônio do Amaral Marques de Lima
-                UI, Product Developer
-                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </p>
-            <hr>
-            
         </div>
 
     </div>
