--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -43,7 +43,7 @@ UI, Product Developer
         </div>
 -->
         <div>
-            <img src="" alt="" class="imgDeveloper">
+            <img src="" alt="" class="imgDeveloper" float="left">
             <p>
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
