--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -42,8 +42,7 @@ UI, Product Developer
             </pre>
         </div>
 -->
-        <div>
-            
+        <div>  
             <p>
                 <img src="" alt="" class="imgDeveloper" float="left">
                 Petrônio do Amaral Marques de Lima
@@ -51,6 +50,15 @@ UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
             <hr>
+
+            <p>
+                <img src="" alt="" class="imgDeveloper" float="left">
+                Petrônio do Amaral Marques de Lima
+                UI, Product Developer
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </p>
+            <hr>
+            
         </div>
 
     </div>
