--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -43,12 +43,12 @@ UI, Product Developer
         </div>
 -->
         <div>  
-            <p>
+            <pre>
                 <img src="" alt="" class="imgDeveloper" float="left">
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </p>
+            </pre>
             <hr>
 
             <p>
@@ -58,7 +58,7 @@ UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
             </p>
             <hr>
-            
+
         </div>
 
     </div>
