--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -44,7 +44,7 @@ UI, Product Developer
 -->
         <div>  
             <pre>
-                <img src="" alt="" class="imgDeveloper" float="left">
+                <img src="" alt="" class="imgDeveloper">
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
