--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -32,17 +32,9 @@
 
     <!-- desenvolvimento do conteudo -->
     <div class="centerPage">
-<!-- Exemplo de inclusao de desenvolvedor - manter exemplo comentado
-        <div>
-            <img src="" alt="" class="imgLeft">
-            <pre class="p">
-Petrônio do Amaral Marques de Lima
-UI, Product Developer
-<a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </pre>
-        </div>
--->
-        <div>  
+
+        <div> 
+            <!--Desenvolvedores-->
             <pre>
                 <img src="" alt="" class="imgDeveloper">
                 Petrônio do Amaral Marques de Lima
@@ -51,12 +43,20 @@ UI, Product Developer
             </pre>
             <hr>
 
-            <p>
-                <img src="" alt="" class="imgDeveloper" float="left">
+            <pre>
+                <img src="" alt="" class="imgDeveloper">
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </p>
+            </pre>
+            <hr>
+
+            <pre>
+                <img src="" alt="" class="imgDeveloper">
+                Petrônio do Amaral Marques de Lima
+                UI, Product Developer
+                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+            </pre>
             <hr>
 
         </div>
