commit update this pages

--- a/cursos.html
+++ b/cursos.html
@@ -42,7 +42,7 @@
 
     <!-- footer -->
     <footer>
-        &copy Copyright 2023 PetronioLima
+        &copy 2023 PetronioLima
     </footer>
 
 </body>
