--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -40,22 +40,7 @@
                 Petrônio do Amaral Marques de Lima
                 UI, Product Developer
                 <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </pre>
-            <hr>
-
-            <pre>
-                <img src="" alt="" class="imgDeveloper">
-                Petrônio do Amaral Marques de Lima
-                UI, Product Developer
-                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
-            </pre>
-            <hr>
-
-            <pre>
-                <img src="" alt="" class="imgDeveloper">
-                Petrônio do Amaral Marques de Lima
-                UI, Product Developer
-                <a href="mailto:paml@discente.ifpe.edu.br">paml@discente.ifpe.edu.br</a>
+                MAT.: 20211LCAF0094
             </pre>
             <hr>
 
@@ -65,7 +50,7 @@
 
     <!-- footer -->
     <footer>
-        &copy Copyright 2023 PetronioLima
+        &copy 2023 PetronioLima
     </footer>
 
 </body>
