--- a/exemple.html
+++ b/exemple.html
@@ -41,7 +41,7 @@
 
     <!-- footer -->
     <footer>
-        &copy Copyright 2023 PetronioLima
+        &copy 2023 PetronioLima
     </footer>
 
 </body>
