--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- footer -->
     <footer>
-        &copy Copyright 2023 PetronioLima
+        &copy 2023 PetronioLima
     </footer>
 
 </body>
