--- a/pagewix.html
+++ b/pagewix.html
@@ -240,7 +240,7 @@
 
     <!-- footer -->
     <footer>
-        &copy Copyright 2023 PetronioLima
+        &copy 2023 PetronioLima
     </footer>
 
 </body>
