--- a/projetos.html
+++ b/projetos.html
@@ -42,7 +42,7 @@
 
     <!-- footer -->
     <footer>
-        &copy Copyright 2023 PetronioLima
+        &copy 2023 PetronioLima
     </footer>
 
 </body>
