--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <hr>
             <h4>Nossa forma de trabalho com você professor, é mostrar como podemos criar um projeto simples com algumas poucas páginas web</h4>
             <br>
-            <h4><strong>Queremos mostrar como o ensino e a aprendizagem podem ser applicados através de uma plataforma simples, mostrando à você como isso pode ser fácil de fazer atráves de uma página WEB.</strong></h4>
+            <h4><strong>Queremos mostrar como o ensino e a aprendizagem podem ser aplicados através de uma plataforma simples, mostrando à você como isso pode ser fácil de fazer atráves de uma página WEB.</strong></h4>
         </div>
 
     </div>
