--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -35,6 +35,14 @@
 
         <div> 
             <!--Desenvolvedores-->
+            <h3 class="p">
+                ATIVIDADE DESENVOLVIDA POR ALUNOS DO
+                <strong>
+                    INSTITUTO FEDERAL DE EDUCAÇÃO, CIÊNCIA E TECNOLOGIA DE PERNAMBUCO - IFPE
+                </strong>
+                <hr>
+            </h3>
+
             <pre>
                 <img src="" alt="" class="imgDeveloper">
                 Petrônio do Amaral Marques de Lima
