--- a/pagewix.html
+++ b/pagewix.html
@@ -24,6 +24,7 @@
         <div class="navbar">
             <h3><a href="index.html" class="link">Home</a></h3>
             <h3><a href="projetos.html" class="link">Projetos</a></h3>
+            <h3><a href="cursos.html" class="link">Cursos</a></h3>
             <h3><a href="desenvolvedores.html" class="link">Desenvolvedores</a></h3>
         </div>
     </div>
