--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="pratica de ensino, ifpe, educacao, web, site, blog, petroniocaxixi">
+    <meta name="keywords" content="pratica, ensino, ifpe, educacao, escola, site, web, navegador, blog, professor, professora, colegio, faculdade, aluno, estudante">
     <title>ENSINANDO A APRENDER</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
